--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,14 @@ dependencies:
     sdk: flutter
   http: ^0.12.0
   rflutter_alert: ^1.0.2
-
+  shared_preferences: ^0.5.6
   cupertino_icons: ^0.1.3
+  flutter_launcher_icons: "^0.7.2"
+
+flutter_icons:
+  image_path: 'assets/ic_launcher.png'
+  android: true
+  ios: true
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +29,5 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+  assets:
+    - assets/ic_launcher.png
