--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   http: ^0.12.0
   rflutter_alert: ^1.0.2
   shared_preferences: ^0.5.6
   cupertino_icons: ^0.1.3
   flutter_launcher_icons: "^0.7.2"
+  intl: ^0.16.1
 
 flutter_icons:
   image_path: 'assets/ic_launcher.png'
