Cambio de applicationId a com.yegayega

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=<yegayega>
-keyPassword=<yegayega>
+storePassword=yegayega
+keyPassword=yegayega
 keyAlias=yegayega
-storeFile=</Users/kokavit/yegayega.jks>
+storeFile=../yegayega.jks
